<resources>
    <string name="app_name">HexColorPicker</string>
    <string name="color_display_description">display the current color</string>
    <string name="spacer_hex">#00</string>
    <string name="spacer_decimal">000</string>
    <string name="hex_color_description">color in hexadecimal:</string>
    <string name="hex_color_spacer">#000000</string>
    <string name="compute">compute</string>
    <string name="compute_content_desc">compute the color</string>
</resources>